<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/add_appbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/add_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:fitsSystemWindows="true"
            app:title="@string/add_toolbar_title"
            app:menu="@menu/add_toolbar"
            app:navigationIcon="@drawable/ic_baseline_arrow_back_24"/>

    </com.google.android.material.appbar.AppBarLayout>


    <EditText
        android:id="@+id/name_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/add_name_hint"
        android:inputType="text"
        android:ems="10"
        app:errorEnabled="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <EditText
        android:id="@+id/age_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/add_age_hint"
        android:inputType="number"
        android:ems="10"
        app:errorEnabled="true"
        app:layout_constraintTop_toBottomOf="@+id/name_edit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/breed_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/add_breed_hint"
        android:ems="10"
        android:inputType="text"
        app:errorEnabled="true"
        app:layout_constraintTop_toBottomOf="@+id/age_edit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/add_button_text"
        app:layout_constraintTop_toBottomOf="@+id/breed_edit"
        app:layout_constraintEnd_toEndOf="@+id/breed_edit"/>


</androidx.constraintlayout.widget.ConstraintLayout>